2005-03-26  Martin Blom  <martin@blom.org>

	* configure.in: Temporarily added -msoft-float to OS4 compiler
	flags.

	* ac97.audio: Bumped version number to 6.0.

	* ac97.audio: Added this AROS driver to the distribution, with
	permission from its author Michal Schulz. Thanks Michal!

	* emu10kx.audio: Added small patch from Davy.

2005-03-24  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Removed unnecessary OS4-only interrupt disable
	code.

2005-03-21  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Applied a fix from Davy for the recording problem
	on Audigy cards. Thanks!

2005-02-02  Martin Blom  <martin@blom.org>

	* Updated all copyright years to 2005.

	* Bumped all version numbers to 6.0.

	* Docs/ahidev.texinfo (The Author): Updated the authors address (5
	years later).

	* Added updated/new italian translations by Paolo Besser. Thanks!

	* AHI preferences: Update the strings in the unit cycle gadget
	when loading new prefs from disk or restoring to the
	defaults. [Gunther Nikl]

2005-01-28  Martin Blom  <martin@blom.org>

	* Updated the docs and .readme files a bit.

2005-01-23  Martin Blom  <martin@blom.org>

	* ahi.device: That CPU overload protection (PreTimer/PostTimer)
	thing didn't work ... at all. Duh. [Gunther Nikl]

2005-01-14  Martin Blom  <martin@blom.org>

	* Updated the README files. The language source files are now
	included in the ahidev archive.

2005-01-13  Martin Blom  <martin@blom.org>

	* AHI preferences: Localized the anti-click time and CPU load
	values as well. [Michael Malyshev]

	* Added updated Russion translations by Michael Malyshev. Thanks!

2005-01-12  Martin Blom  <martin@blom.org>

	* The binary user archive now includes the .ct files for easy
	translation updates.

	* Updated to FlexCat 2.6.6-cvs-2005-01-12 and regenerated language
	files.

	* Released AHI preferences 5.15.

	* Released ahi.device 5.56.

	* Added 'FILL' switch to FlexCat when generating the catalogs in